<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MockTrade</string>
    <string name="action_settings">Settings</string>
    <string name="init_database_error_title">Error initialing Database</string>
    <string name="init_database_error_message">There has been an error initializing the database.
        This renders the application unusable.  Contact the vendor to report the problem.</string>
    <string name="nav_money_center">$$$ Center</string>
    <string name="nav_research">Research</string>
    <string name="nav_ideas">Ideas</string>
    <string name="nav_settings">Settings</string>
    <string name="settings_market_open_time_title">Market Open Time</string>
    <string name="settings_market_open_time_summary">Local time the markets open. This is used to determine when the app starts polling.</string>
    <string name="settings_market_close_time_title">Market Close Time</string>
    <string name="settings_market_close_time_summary">Local time the markets close. This is used to determine when the app stops polling.</string>
    <string name="settings_poll_interval_title">Poll Interval - Normal</string>
    <string name="settings_poll_interval_summary">Interval that the application checks for stock updates.</string>
    <string name="settings_poll_interval_order_title">Poll Interval - Open Orders</string>
    <string name="settings_poll_interval_order_summary">Interval that the application checks when processing open orders.</string>

    <string-array name="settings_poll_interval_display_values">
        <item>30 Seconds</item>
        <item>1 Minute</item>
        <item>5 Minutes</item>
        <item>15 Minutes</item>
    </string-array>

    <string-array name="settings_poll_interval_order_display_values">
        <item>5 Seconds</item>
        <item>15 Seconds</item>
        <item>30 Seconds</item>
        <item>1 Minute</item>
    </string-array>

    <string name="day_change_label">TODAY</string>
    <string name="total_change_label">TOTAL</string>

    <string name="account_totals_label">Totals</string>
    <string name="account_name_label">Name</string>
    <string name="account_description_label">Description</string>
    <string name="account_init_balance_label">Initial Balance</string>
    <string name="account_strategy_label">Strategy</string>
    <string name="account_current_balance_label">Current Balance</string>
    <string name="account_exclude_from_totals_label">Exclude From Totals</string>

    <string-array name="account_strategy_display_values">
        <item>None</item>
        <item>Dogs of the Dow</item>
        <item>Triple ETF Momentum</item>
    </string-array>

    <string name="quickstart_account_name">Dogs of the Dow</string>
    <string name="quickstart_account_desc">Account created via QuickStart button</string>

    <string name="account_create_title">New Portfolio</string>

    <string name="account_delete_dlg_title">Are you sure?</string>
    <string name="account_delete_dlg_message_format">You are about to delete \'%s\' and the associated data.  This cannot be undone!!!</string>

    <string name="order_create_buy_title">Buy</string>
    <string name="order_create_sell_title">Sell</string>

    <string-array name="order_status_display_values">
        <item>Open</item>
        <item>Fulfilled</item>
        <item>Error</item>
        <item>Canceled</item>
    </string-array>

    <string-array name="order_type_display_values">
        <item>Buy</item>
        <item>Sell</item>
    </string-array>

    <string-array name="order_strategy_display_values">
        <item>Market</item>
        <item>Manual</item>
        <item>Limit</item>
        <item>Stop Loss</item>
        <item>Trailing Stop ($)</item>
        <item>Trailing Stop (%)</item>
    </string-array>

    <string-array name="order_duration_display_values">
        <item>Good til Canceled</item>
        <item>Day</item>
    </string-array>

    <string name="account_item_new_order_button">Buy</string>
    <string name="account_item_open_orders_format">Orders: %d</string>

    <string name="order_item_id">Order #:</string>
    <string name="order_item_symbol">Symbol:</string>
    <string name="order_item_action">Action:</string>
    <string name="order_item_strategy">Type:</string>
    <string name="order_item_created">Created:</string>
    <string name="order_item_quantity">Quantity:</string>

    <string name="order_cancel_dlg_title">Are you sure?</string>
    <string name="order_cancel_dlg_message_format">You are about to cancel Order #:%1$d for \'%2$s\'.  This cannot be undone!!!</string>

    <string name="order_edit_title_edit">Change Order</string>
    <string name="order_edit_title_new">New Order</string>
    <string name="order_edit_ok_button_new">Execute</string>
    <string name="order_edit_ok_button_edit">Change</string>

    <string name="order_symbol_label">Symbol</string>
    <string name="order_action_label">Action</string>
    <string name="order_strategy_label">Order Type</string>
    <string name="order_limit_price_label">Limit Price</string>
    <string name="order_stop_price_label">Stop Amount($)</string>
    <string name="order_stop_percent_label">Stop Amount(%)</string>
    <string name="order_quantity_label">Quantity</string>
    <string name="order_symbol_hint">ex: GOOG</string>

    <string name="portfolio_heading">Portfolio</string>
    <string name="portfolio_new_account_button">New</string>

    <string name="quantity_edit_control_balance_label">Available Funds:</string>
    <string name="quantity_edit_control_cost_buy_label">Estimated Cost:</string>
    <string name="quantity_edit_control_cost_sell_label">Estimated Value:</string>
    <string name="quantity_edit_control_market_closed_warning">The markets are currently closed. Orders will be processed at the next market open.</string>

    <string name="quantity_edit_error_insufficient_funds">Insufficient Funds</string>
    <string name="quantity_edit_error_invalid_amount">Invalid Amount</string>

    <string name="notification_order_title">MockTrade Execution</string>
    <string name="notification_order_buy_success_format">Buy order for %1$s executed %2$d shares at %3$s for a total cost of %4$s.</string>
    <string name="notification_order_sell_success_format">Sell order for %1$s executed %2$d shares at %3$s for a total value of %4$s. (Profit: %5$s)</string>
    <string name="notification_order_error_format">Order %1$d for %2$s failed to executed. Error: %3$s</string>
    <string name="order_list_activity_label">Open Orders</string>
    <string name="setting_activity_label">Settings</string>
    <string name="menu_new_portfolio">New Portfolio</string>
    <string name="menu_loading">Loading...</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="portfolio_view_intro_header">Get Started</string>
    <string name="portfolio_view_create_portfolio">Create Portfolio</string>
    <string name="menu_backup_db">Backup Database</string>
    <string name="menu_backup_db_success">Backup Successful</string>
    <string name="menu_backup_db_fail">Backup Failed</string>
    <string name="menu_restore_db">Restore Database</string>
    <string name="menu_restore_db_success">Restore Successful. Restart App to see change.</string>
    <string name="menu_restore_db_fail">Restore Failed</string>
    <string name="portfolio_view_last_sync">Last Sync: %1$s</string>
    <string name="portfolio_view_last_quote">Last Quote: %1$s</string>
    <string name="menu_hide_exclude_accounts">Hide Exclude Accounts</string>
    <string name="menu_demo_mode">Demo Mode</string>
    <string name="portfolio_view_empty_graph_text">Nothing to see here.\nCreate a portfolio and come back during market hours.</string>
    <string name="portfolio_view_time_title_today">Today</string>
    <string name="portfolio_view_time_title_last_week">Last Week</string>
    <string name="portfolio_view_time_title_last_month">Last Month</string>
    <string name="portfolio_view_time_title_last_90_days">Last 90 Days</string>
    <string name="portfolio_view_graph_spinner_totals">Totals</string>
    <string name="portfolio_view_create_dogs">Dogs of the Dow QuickStart</string>

    <string name="highlight_total_account">Account Total</string>
    <string name="highlight_total_overall">Portfolio Total</string>
    <string name="highlight_best_day">Today\'s Best</string>
    <string name="highlight_worst_day">Today\'s Worst</string>
    <string name="highlight_best_total">Portfolio Best</string>
    <string name="highlight_worst_total">Portfolio Worst</string>

    <string name="watch_config_item_twenty_four_hour_time">Show 24hr Time</string>
    <string name="watch_config_item_hide_exclude_account">Hide Exclude Accounts</string>
    <string name="watch_config_item_obfuscate_total">Demo Mode</string>

</resources>
