<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always"
        android:title="@string/menu_refresh" />

    <item
        android:id="@+id/menu_progress_bar"
        android:title="@string/menu_loading"
        android:visible="false"
        app:showAsAction="always"
        app:actionLayout="@layout/toolbar_menu_progress_bar" />

    <item android:id="@+id/menu_new_portfolio"
        android:icon="@drawable/ic_new_portfolio"
        app:showAsAction="never"
        android:title="@string/menu_new_portfolio" />


    <item
        android:id="@+id/menu_backup_db"
        app:showAsAction="never"
        android:title="@string/menu_backup_db" />

    <item
        android:id="@+id/menu_hide_exclude_accounts"
        app:showAsAction="never"
        android:checkable="true"
        android:title="@string/menu_hide_exclude_accounts" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never"
        android:title="@string/menu_settings" />

</menu>