<?xml version="1.0" encoding="utf-8"?>

<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            style="@style/OrderItemRow"
            android:orientation="horizontal">

            <TextView
                style="@style/OrderItemLabel"
                android:text="@string/order_item_id"
                />

            <TextView
                android:id="@+id/order_item_id"
                style="@style/OrderItemValue"
                android:textColor="@android:color/primary_text_dark"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/OrderItemRow"
            android:orientation="horizontal">

            <TextView
                style="@style/OrderItemLabel"
                android:text="@string/order_item_symbol"
                />

            <TextView
                android:id="@+id/order_item_symbol"
                style="@style/OrderItemValue"
                android:textColor="@android:color/primary_text_dark"
                />
        </LinearLayout>


        <LinearLayout
            style="@style/OrderItemRow"
            android:orientation="horizontal">

            <TextView
                style="@style/OrderItemLabel"
                android:text="@string/order_item_action"
                />

            <TextView
                android:id="@+id/order_item_action"
                style="@style/OrderItemValue"
                android:textColor="@android:color/primary_text_dark"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            style="@style/OrderItemRow"
            android:orientation="horizontal">

            <TextView
                style="@style/OrderItemLabel"
                android:text="@string/order_item_created"
                />

            <TextView
                android:id="@+id/order_item_created"
                style="@style/OrderItemValue"
                android:textColor="@android:color/primary_text_dark"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/OrderItemRow"
            android:orientation="horizontal">

            <TextView
                style="@style/OrderItemLabel"
                android:text="@string/order_item_quantity"
                />

            <TextView
                android:id="@+id/order_item_quantity"
                style="@style/OrderItemValue"
                android:textColor="@android:color/primary_text_dark"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/OrderItemRow"
            android:orientation="horizontal">

            <TextView
                style="@style/OrderItemLabel"
                android:text="@string/order_item_strategy"
                />

            <TextView
                android:id="@+id/order_item_strategy"
                style="@style/OrderItemValue"
                android:textColor="@android:color/primary_text_dark"
                />
        </LinearLayout>

    </LinearLayout>

</merge>