<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="60dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/portfolio_view_intro_header"
        android:textColor="?attr/colorAccent"
        android:textStyle="bold"
        android:textSize="24dp"/>

    <Button
        android:id="@+id/portfolio_view_holder_empty_dogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/portfolio_view_create_dogs"
        android:textColor="?attr/colorAccent"/>


    <Button
        android:id="@+id/portfolio_view_holder_empty_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/portfolio_view_create_portfolio"
        android:textColor="?attr/colorAccent"/>


</LinearLayout>