<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/quantity_edit_label"
        style="@style/ControlLabel">
    </TextView>

    <EditText
        android:id="@+id/quantity_edit_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/control_number_hint">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/quantity_edit_cost_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/quantity_edit_control_cost_buy_label"
            />

        <TextView
            android:id="@+id/quantity_edit_cost"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/quantity_edit_balance_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/quantity_edit_control_balance_label"
            />

        <TextView
            android:id="@+id/quantity_edit_balance"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/nav_on_color"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/quantity_edit_market_closed_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        android:text="@string/quantity_edit_control_market_closed_warning"
        />


</merge>


